<resources>
    <string name="app_name">군용물자관리시스템</string>
    <string name="title_activity_sample">SampleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">Logo</string>
    <string name="background_image">Background Image</string>
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="input_password">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="findAccount">아이디/비밀번호 찾기</string>
    <string name="signup">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="pwConfirm">비밀번호 확인</string>
    <string name="inputPwConfirm">비밀번호를 한번 더 입력해주세요.</string>
    <string name="armyUnitName">소속 부대명</string>
    <string name="inputArmyUnitName">소속 부대명을 입력해주세요.</string>
    <string name="armyUnitDivision">소속 사단</string>
    <string name="inputArmyUnitDivision">소속 사단을 입력해주세요</string>
    <string name="inputBattalion">소속 대대를 입력해주세요.</string>
    <string name="battalion">소속 대대</string>
    <string name="inputRegiment">소속 연대를 입력해주세요</string>
    <string name="regiment">소속 연대</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findAccount2">계정찾기</string>
    <string name="findID">아이디 찾기</string>
    <string name="findPW">비밀번호 찾기</string>
    <string name="name">이름</string>
    <string name="inputGroupNum">소속번호를 입력해주세요.</string>
    <string name="groupNum">소속번호</string>
    <string name="findSubText">소속번호를 모를 경우 070-4252-2723으로 문의주세요.</string>
    <string name="profile">profile</string>
    <string name="moreSee">더 보기</string>
    <string name="productStatus">자재현황</string>
    <string name="accountApplyState">회원 신청 현황</string>
    <string name="item_image">Item Image</string>
    <string name="detail">detail</string>
    <string name="home">홈</string>
    <string name="accountManagement">회원관리</string>
    <string name="itemManagement">자재관리</string>
    <string name="setting">설정</string>
    <string name="addProduct">자재 추가</string>
    <string name="disAndReturn">불출 / 반납</string>
    <string name="changeInfo">정보 변경</string>
    <string name="logout">로그아웃</string>
    <string name="nfcTagRegister">NFC 태그 등록</string>
    <string name="edit">수정</string>
    <string name="NFC">NFC</string>
    <string name="inputTag">TAG를 입력해주세요.</string>
    <string name="register">등록</string>
    <string name="noSpecial">특이사항 없음</string>
    <string name="productName">자재명</string>
    <string name="inputProductName">자제명을 입력해주세요.</string>
    <string name="tagInfo">TAG 정보</string>
    <string name="inputTagInfo">태그정보를 입력해주세요.</string>
    <string name="special">특이사항</string>
    <string name="disposal">폐기처분</string>
    <string name="product_image">Product Image</string>
    <string name="nfc_read">NFC Read</string>
    <string name="tReturn">반납하기</string>
    <string name="disburse">불출하기</string>
    <string name="itemName">품목명</string>
    <string name="inputItemName">품목명을 입력해주세요.</string>
    <string name="add">추가</string>
    <string name="more">more</string>
    <string name="delete">삭제</string>
    <string name="agree">허용</string>
    <string name="cancel">거절</string>
    <string name="addItem">품목추가</string>
    <string name="company">중대</string>
    <string name="disburseInfo">불출 정보</string>
    <string name="platoon">소대</string>
    <string name="inputName">이름을 입력해주세요.</string>
    <string name="inputContent">내용을 입력해주세요.</string>
    <string name="etc">기타</string>
    <string name="exit">종료</string>
</resources>