<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.findaccount.findPW.FindPWFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp"
        />

    <TextView
        android:id="@+id/idTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/id"
        android:textColor="@color/font_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_id"
        android:hint="@string/input_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:nextFocusDown="@id/pwEdit"
        android:paddingHorizontal="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toBottomOf="@id/idTxv" />

    <TextView
        android:id="@+id/nameTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/font_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toBottomOf="@id/idEdit"
        />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_id"
        android:hint="@string/inputArmyUnitName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:nextFocusDown="@id/pwEdit"
        android:paddingHorizontal="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toBottomOf="@id/nameTxv" />


    <TextView
        android:id="@+id/groupNumTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/groupNum"
        android:textColor="@color/font_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toBottomOf="@id/nameEdit"
        />

    <EditText
        android:id="@+id/groupEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_id"
        android:hint="@string/inputGroupNum"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:nextFocusDown="@id/pwEdit"
        android:paddingHorizontal="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toBottomOf="@id/groupNumTxv" />

    <TextView
        android:id="@+id/findPWSubTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findSubText"
        android:textColor="@color/font_gray_color"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/groupEdit"
        app:layout_constraintTop_toBottomOf="@id/groupEdit"
        />

    <Button
        android:id="@+id/findPWButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/main_color"
        android:text="@string/findPW"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toBottomOf="@id/findPWSubTxv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        />



</androidx.constraintlayout.widget.ConstraintLayout>