<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.nfcWrite.NFCWriteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialManagement.Toolbar.WithArrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nfcTagRegister"
            android:textColor="@color/main_color" />


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/nfcTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/NFC"
        android:textColor="@color/font_gray_color"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/tagEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/nfcTxv"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_id"
        android:hint="@string/inputTag"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:nextFocusDown="@id/pwConfirmEdit"
        android:paddingHorizontal="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nfcTxv" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/main_color"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="15dp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>