<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_color"
    tools:context=".screen.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <ImageView
        android:id="@+id/logoImv"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_login"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toTopOf="@id/idEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_edit_id"
        android:drawableStart="@drawable/ic_id"
        android:drawablePadding="15dp"
        android:hint="@string/input_id"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:textColor="@color/font_black_color"
        android:textColorHint="@color/font_gray_color"
        android:textSize="13sp"
        android:text="test01"
        app:layout_constraintBottom_toTopOf="@id/pwEdit"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/pwEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_id"
        android:drawableStart="@drawable/ic_pw"
        android:drawablePadding="15dp"
        android:hint="@string/input_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        android:textColor="@color/font_black_color"
        android:textSize="13sp"
        android:text="12345678"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/main_color"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/end_guid"
        app:layout_constraintStart_toStartOf="@id/start_guid"
        app:layout_constraintTop_toBottomOf="@id/pwEdit" />

    <TextView
        android:id="@+id/findAccountTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/findAccount"
        android:textSize="15sp"
        android:textColor="@color/font_deep_gray_color"
        app:layout_constraintEnd_toStartOf="@id/line"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        />

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/font_black_color"
        app:layout_constraintEnd_toStartOf="@id/signUpTxv"
        app:layout_constraintTop_toTopOf="@id/findAccountTxv"
        app:layout_constraintBottom_toBottomOf="@id/findAccountTxv"
        app:layout_constraintStart_toEndOf="@id/findAccountTxv"
        />

    <TextView
        android:id="@+id/signUpTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/signup"
        android:textSize="15sp"
        android:textColor="@color/font_deep_gray_color"
        app:layout_constraintStart_toEndOf="@id/line"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/pwEdit"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>